force-app/main/default/objects/Opportunity/fields/Account_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Account_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Account Owner this account/opportunity is being assigned to by the AE.</description>
    <inlineHelpText>Insert the name of the Account Manager who will manage this account.</inlineHelpText>
    <label>Account Assigned To:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RTOpportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>