force-app/main/default/objects/Opportunity/fields/Account_Cancellation_Probability__c.field-meta.xml
<CustomField>
    <fullName>Account_Cancellation_Probability__c</fullName>
    <formula>IF( 
	RecordTypeId = &#39;012d0000000sTEJ&#39;  ||
	RecordTypeId = &#39;012d0000000sTEL&#39;  || 
	RecordTypeId = &#39;012d0000000sTEK&#39;   , 
		Account.Cancellation_Probability__c,
		NULL
	)</formula>
    <label>Account Cancellation Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>