force-app/main/default/objects/Opportunity/fields/Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Account_Product__c</fullName>
    <formula>TEXT( Account.Product__c )</formula>
    <label>Account Product</label>
    <type>Text</type>
</CustomField>