force-app/main/default/objects/Opportunity/fields/Acct_Admin_Decison_Maker_Checked__c.field-meta.xml
<CustomField>
    <fullName>Acct_Admin_Decison_Maker_Checked__c</fullName>
    <inlineHelpText>Accounts are required to have a contact flagged as an Acct Admin and as a Decision Maker.  Fields are located at the contact level.</inlineHelpText>
    <label>Acct Admin/Decison Maker Checked?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>