force-app/main/default/objects/Opportunity/fields/Additional_Order_ID2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Order_ID2__c</fullName>
    <description>Additional Order ID2</description>
    <inlineHelpText>Additional Order for a deal.  Example: new customer order is split into 3 orders.  Main subscription, implementation deposit &amp; implementation final</inlineHelpText>
    <label>Additional Order ID 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>