force-app/main/default/objects/Opportunity/fields/Age_Number__c.field-meta.xml
<CustomField>
    <fullName>Age_Number__c</fullName>
    <formula>CloseDate - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>