force-app/main/default/objects/Opportunity/fields/Agreement_Initial_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Initial_Date_Signed__c</fullName>
    <label>Agreement Initial Date Signed</label>
    <type>Date</type>
</CustomField>