force-app/main/default/objects/Opportunity/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <label>Agreement Status</label>
    <length>99</length>
    <type>Text</type>
</CustomField>