force-app/main/default/objects/Opportunity/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Calculated from the total of the Product TCV associated with this Opportunity (excludes uncommitted audio revenue).</description>
    <inlineHelpText>Calculated from the total of the Product TCV associated with this Opportunity (excludes uncommitted audio revenue).</inlineHelpText>
    <label>Total TCV</label>
    <summarizedField>OpportunityLineItem.Value_Over_Term__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.isReportable_Text__c</field>
        <operation>equals</operation>
        <value>Valid</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>