force-app/main/default/objects/Opportunity/fields/Amount_Copy__c.field-meta.xml
<CustomField>
    <fullName>Amount_Copy__c</fullName>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Copy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>