force-app/main/default/objects/Opportunity/fields/Area_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Focus__c</fullName>
    <description>This is for outbound prospecting</description>
    <label>Area of Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Creative Services</fullName>
            </value>
            <value>
                <fullName>In House Agency</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>