force-app/main/default/objects/Opportunity/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <description>Used for iMC and in PGi Renewal Opportunity process... originally an iMC field</description>
    <label>Auto Renew?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>