force-app/main/default/objects/Opportunity/fields/Billing_Value__c.field-meta.xml
<CustomField>
    <fullName>Billing_Value__c</fullName>
    <description>Populated by ASX</description>
    <inlineHelpText>Actual total billing to the customer</inlineHelpText>
    <label>Billing Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>