force-app/main/default/objects/Opportunity/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the business contact for the event.</description>
    <inlineHelpText>Contact on the business side</inlineHelpText>
    <label>Business Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Business Contact)</relationshipLabel>
    <relationshipName>Opportunities2TP</relationshipName>
    <type>Lookup</type>
</CustomField>