force-app/main/default/objects/Opportunity/fields/Cancellation_Probability__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Probability__c</fullName>
    <description>Populated by ASX
the higher the value the higher the risk of cancellation</description>
    <inlineHelpText>The higher the value the higher the risk of cancellation.

4 to 5 - Moderate Risk
6 and above -  High Risk.</inlineHelpText>
    <label>Cancellation Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>