force-app/main/default/objects/Opportunity/fields/Celigo_Sync_Helper__c.field-meta.xml
<CustomField>
    <fullName>Celigo_Sync_Helper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Celigo Sync Helper</label>
    <type>Checkbox</type>
</CustomField>