force-app/main/default/objects/Opportunity/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Channel from Opportunity Owner&#39;s user record</description>
    <label>Owner&#39;s Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>iMeetCentral</fullName>
            </value>
            <value>
                <fullName>Information Systems</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Major Accounts</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Modality</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>ReadyTalk</fullName>
            </value>
            <value>
                <fullName>Sales Engineers</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>TalkPoint</fullName>
            </value>
            <value>
                <fullName>Tier One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>