force-app/main/default/objects/Opportunity/fields/Churn_Reason_Codes__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason_Codes__c</fullName>
    <label>Churn Reason Codes(primary)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Service issue</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Economic/market change</fullName>
            </value>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Lost compelling need</fullName>
            </value>
            <value>
                <fullName>No reason provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>