force-app/main/default/objects/Opportunity/fields/Churn_Reason_Codes_secondary__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason_Codes_secondary__c</fullName>
    <label>Churn Reason Codes(secondary)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Churn_Reason_Codes__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Budget cuts</fullName>
            </value>
            <value>
                <fullName>Bug fatigue</fullName>
            </value>
            <value>
                <fullName>Built in-house solution</fullName>
            </value>
            <value>
                <fullName>Change in business strategy</fullName>
            </value>
            <value>
                <fullName>Change in staff</fullName>
            </value>
            <value>
                <fullName>Departmental reorganization</fullName>
            </value>
            <value>
                <fullName>Downgraded to lower edition</fullName>
            </value>
            <value>
                <fullName>Loss of user adoption</fullName>
            </value>
            <value>
                <fullName>Lost funding</fullName>
            </value>
            <value>
                <fullName>Merger/Acquisition</fullName>
            </value>
            <value>
                <fullName>Missing features</fullName>
            </value>
            <value>
                <fullName>Out of business/bankrupt</fullName>
            </value>
            <value>
                <fullName>Poor customer service experiences</fullName>
            </value>
            <value>
                <fullName>Product didn&apos;t solve problem</fullName>
            </value>
            <value>
                <fullName>Project ended</fullName>
            </value>
            <value>
                <fullName>Reduction in workforce</fullName>
            </value>
            <value>
                <fullName>Too expensive/lack of ROI</fullName>
            </value>
            <value>
                <fullName>UI/UX complaints</fullName>
            </value>
            <value>
                <fullName>Went with a direct competitor</fullName>
            </value>
            <value>
                <fullName>Went with an indirect competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>