force-app/main/default/objects/Opportunity/fields/CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_ID__c</fullName>
    <description>Client ID number</description>
    <label>CLIENT ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>