force-app/main/default/objects/Opportunity/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Best Solution</fullName>
            </value>
            <value>
                <fullName>Capabilities</fullName>
            </value>
            <value>
                <fullName>Incumbent Supplier</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Project Cancelled</fullName>
            </value>
            <value>
                <fullName>Project Fit</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Solution Gap</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>