force-app/main/default/objects/Opportunity/fields/Closed_Lost_Nuture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Nuture_Reason__c</fullName>
    <inlineHelpText>Indicate why the opportunity was lost.</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>Neglected</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>