force-app/main/default/objects/Opportunity/fields/Closed_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason_Explanation__c</fullName>
    <label>Closed Reason Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>