force-app/main/default/objects/Opportunity/fields/Commissions_Override__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only open to Business Admins to see, if selected the system will not update Commission records but Business Admins can control manually.</inlineHelpText>
    <label>Commissions Override</label>
    <type>Checkbox</type>
</CustomField>