force-app/main/default/objects/Opportunity/fields/Competitor_s__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s__c</fullName>
    <label>Competitor(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>8X8</fullName>
            </value>
            <value>
                <fullName>AAPT</fullName>
            </value>
            <value>
                <fullName>Airtel</fullName>
            </value>
            <value>
                <fullName>Amacus</fullName>
            </value>
            <value>
                <fullName>Arcano</fullName>
            </value>
            <value>
                <fullName>Arkadin</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Atlassian/Jira</fullName>
            </value>
            <value>
                <fullName>Bluejeans</fullName>
                <label>BlueJeans</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <label>British Telecom</label>
            </value>
            <value>
                <fullName>Broadsoft</fullName>
            </value>
            <value>
                <fullName>Budget Conference</fullName>
            </value>
            <value>
                <fullName>Chorus Call</fullName>
            </value>
            <value>
                <fullName>Cisco Teams</fullName>
            </value>
            <value>
                <fullName>CommuniCloud</fullName>
            </value>
            <value>
                <fullName>DSNL</fullName>
            </value>
            <value>
                <fullName>FreeConferenceCall</fullName>
            </value>
            <value>
                <fullName>Fuze Business</fullName>
                <label>Fuze</label>
            </value>
            <value>
                <fullName>Google+ Hangout</fullName>
                <label>Google Hangouts</label>
            </value>
            <value>
                <fullName>GoToMeeting</fullName>
            </value>
            <value>
                <fullName>GoToWebinar</fullName>
            </value>
            <value>
                <fullName>Intercall (West)</fullName>
            </value>
            <value>
                <fullName>Inxpo</fullName>
            </value>
            <value>
                <fullName>Join.me</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
                <label>Level 3 (CenturyLink)</label>
            </value>
            <value>
                <fullName>Microsoft Meeting Broadcast</fullName>
            </value>
            <value>
                <fullName>Microsoft Skype for Business</fullName>
            </value>
            <value>
                <fullName>Microsoft Teams</fullName>
            </value>
            <value>
                <fullName>NASDAQ OMX</fullName>
                <label>NASDAQ (West)</label>
            </value>
            <value>
                <fullName>ON24</fullName>
                <label>On24</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>