force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <description>Populated from ASX</description>
    <inlineHelpText>Number of months for the contract</inlineHelpText>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>