force-app/main/default/objects/Opportunity/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <description>Populated by ASX</description>
    <inlineHelpText>Total Bookings for the contract from ASX</inlineHelpText>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>