force-app/main/default/objects/Opportunity/fields/Converted_from_Global_Contact_MQL__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Global_Contact_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted from Global Contact MQL</label>
    <type>Checkbox</type>
</CustomField>