force-app/main/default/objects/Opportunity/fields/Converted_from_MQA__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_MQA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted from MQA</label>
    <type>Checkbox</type>
</CustomField>