force-app/main/default/objects/Opportunity/fields/Count_of_BATs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_BATs__c</fullName>
    <label>Count of BATs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>