force-app/main/default/objects/Opportunity/fields/Count_of_Min_Commit_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Min_Commit_Quarterly__c</fullName>
    <label>Count of Min Commit Quarterly</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Min_Commit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Billing_Frequency__c</field>
        <operation>equals</operation>
        <value>Quarterly</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>