force-app/main/default/objects/Opportunity/fields/Count_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Products__c</fullName>
    <label>Count of Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>