force-app/main/default/objects/Opportunity/fields/CountofISTRecords__c.field-meta.xml
<CustomField>
    <fullName>CountofISTRecords__c</fullName>
    <label>Count of IST Records</label>
    <summaryForeignKey>Implementation_Services__c.Related_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>