force-app/main/default/objects/Opportunity/fields/Created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Lead Conversion process to update the Opportunity Close date from the standard month end to customized 60 days out.</description>
    <label>Created from Lead</label>
    <type>Checkbox</type>
</CustomField>