force-app/main/default/objects/Opportunity/fields/Current_Monthly_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Spend__c</fullName>
    <inlineHelpText>Monthly amount prospect is currently spending for audio &amp; web services.</inlineHelpText>
    <label>Current Monthly Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>