force-app/main/default/objects/Opportunity/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <inlineHelpText>This field is to help understand and report on deployment opportunities.  So whether it is a POC, Initial Deployment or an expansion of an existing deployment.  Where the opportunity is for ad-hoc services, support or hardware, you can just select No.</inlineHelpText>
    <label>Deployment Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POC</fullName>
                <label>POC / Pilot</label>
            </value>
            <value>
                <fullName>Initial Deployment</fullName>
            </value>
            <value>
                <fullName>Extended User Estate</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>