force-app/main/default/objects/Opportunity/fields/Differentiating_Win_Factors__c.field-meta.xml
<CustomField>
    <fullName>Differentiating_Win_Factors__c</fullName>
    <label>Differentiating Win Factors</label>
    <type>TextArea</type>
</CustomField>