force-app/main/default/objects/Opportunity/fields/Docs_in_Review_legal__c.field-meta.xml
<CustomField>
    <fullName>Docs_in_Review_legal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Management Criteria Met</description>
    <inlineHelpText>Management Criteria Met</inlineHelpText>
    <label>D: Docs In Review (legal)</label>
    <type>Checkbox</type>
</CustomField>