force-app/main/default/objects/Opportunity/fields/ECommerce_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ECommerce_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>ECommerce Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>