force-app/main/default/objects/Opportunity/fields/ECommerce_Upsell__c.field-meta.xml
<CustomField>
    <fullName>ECommerce_Upsell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECommerce Upsell</label>
    <type>Checkbox</type>
</CustomField>