force-app/main/default/objects/Opportunity/fields/Est_Mins_Month__c.field-meta.xml
<CustomField>
    <fullName>Est_Mins_Month__c</fullName>
    <label>Est. Mins/Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>