force-app/main/default/objects/Opportunity/fields/Est_T_E_should_be_bundled_Sales__c.field-meta.xml
<CustomField>
    <fullName>Est_T_E_should_be_bundled_Sales__c</fullName>
    <description>This is the estimated T&amp;E for onsite production that should be bundled</description>
    <inlineHelpText>Should be entered by Sales after receiving from Assignment Desk; estimate should be bundled with overall Event cost.</inlineHelpText>
    <label>T&amp;E Quote from Assignment Desk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>