force-app/main/default/objects/Opportunity/fields/External_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_ID__c</fullName>
    <description>Requested by Michael Green for iContract. External Opportunity ID for 18 Digit ID</description>
    <externalId>true</externalId>
    <label>External Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>