force-app/main/default/objects/Opportunity/fields/External_Production_Actual_Finance__c.field-meta.xml
<CustomField>
    <fullName>External_Production_Actual_Finance__c</fullName>
    <inlineHelpText>To be entered and tracked by Finance.</inlineHelpText>
    <label>Actual Production Cost - Finance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>