force-app/main/default/objects/Opportunity/fields/External_Production_Estimate__c.field-meta.xml
<CustomField>
    <fullName>External_Production_Estimate__c</fullName>
    <inlineHelpText>Should be entered by Sales after receiving from Assignment Desk; estimate should be bundled with overall Event cost.</inlineHelpText>
    <label>Production Quote from Assignment Desk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>