force-app/main/default/objects/Opportunity/fields/Finance_Upside_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Finance_Upside_Criteria__c</fullName>
    <formula>IF( TEXT(ForecastCategoryName)  = &quot;Omitted&quot; , &quot;Lost&quot;, 
	IF( IsWon = TRUE , &quot;Won&quot;, 
		IF(RecordType.Name = &quot;Renewal Self Service&quot;, &quot;Renewal Self Service&quot;,
		IF(CONTAINS(RecordType.Name , &quot;Renewal&quot;), 
					IF(AND(
					Has_Compelling_Event__c = TRUE,
					Has_Budget__c = TRUE,
					Has_Verbal_Approval__c = TRUE, 
					Docs_in_Review_legal__c = TRUE), &quot;Renewal Forecasted to Close Deal&quot;,
						IF( Management_Proforma_Deal__c = TRUE, &quot;Renewal Proforma Deal&quot;, &quot;Renewal Upside Deal&quot; ) 
				),
			IF(AND(
					Has_Compelling_Event__c = TRUE,
					Has_Budget__c = TRUE,
					Has_Verbal_Approval__c = TRUE, 
					Docs_in_Review_legal__c = TRUE), &quot;Forecasted to Close Deal&quot;,
						IF( Management_Proforma_Deal__c = TRUE, &quot;Proforma Deal&quot;, &quot;Upside Deal&quot; ) 
					)
				)
			)
		)
	)</formula>
    <inlineHelpText>Categories for management forecast:
Forecasted to Close Deals
Proforma Deals
Upside Deals
Renewal Deals
Won Deals</inlineHelpText>
    <label>Finance Upside Criteria</label>
    <type>Text</type>
</CustomField>