force-app/main/default/objects/Opportunity/fields/First_Year_License_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Year_License_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the amount of the first year license amount</description>
    <inlineHelpText>This is the amount of the ‘license’ for the 1st year of this ‘deal’.</inlineHelpText>
    <label>1st Year License Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>