force-app/main/default/objects/Opportunity/fields/Fixed_Bid_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Bid_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fixed Bid Price</label>
    <type>Checkbox</type>
</CustomField>