force-app/main/default/objects/Opportunity/fields/Forecast_Stages__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Stages__c</fullName>
    <label>Forecast Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>