force-app/main/default/objects/Opportunity/fields/Forecast_Status__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Status__c</fullName>
    <label>Forecast Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Stage</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>